--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "jquery.easing": "^1.4.1"
     },
     "devDependencies": {
-        "browser-sync": "^2.26.5",
+        "browser-sync": "2.26.5",
         "del": "4.0.0",
         "gulp": "4.0.0",
         "gulp-autoprefixer": "6.0.0",
